--- a/css/layout.css
+++ b/css/layout.css
@@ -1016,3 +1016,20 @@ footer .social-links li:first-child { margin-left: 0; }
   align-items: center;
   width: 90%;
 }
+
+.simon-container {
+  height: 100vh;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #313131;
+}
+
+.simon-title {
+  margin-top: 60px;
+  color: #FFF;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 150%;
+}
