--- a/public/css/game-board.css
+++ b/public/css/game-board.css
@@ -43,6 +43,13 @@
   width: 170px;
 }
 
+.red-box:focus,
+.green-box:focus,
+.blue-box:focus,
+.yellow-box:focus {
+  box-shadow: inset 0 0 10px 10px purple;
+}
+
 .red-box {
   background-color: red;
   opacity: .3;
